theme/static/css/main.css
@import url(pygments.css);

body {
  padding-top: 5rem;
}

a.anchor {
  display: block;
  position: relative;
  top: -80px;
  visibility: hidden;
}

a.no-underline {
  text-decoration: none !important;
}

h1 {
  font-size: 1.8em;
}

h2 {
  font-size: 1.55em;
}

h3 {
  font-size: 1.35em;
}

.navbar {
  margin-bottom: 20px;
}

.article-list ul {
  list-style-type: none;
  padding-left: 0;
}

.article-list li {
  padding-bottom:0.6em;
}

.article-tag, .article-tag a {
  color: gray;
}

.article-info {
  padding: 0.2em;
}

.article-info-date {
  font-family: arial; sans;
  font-size: 0.9em;
  color: gray;
  padding: 0.2em;
}

.article-info {
  line-height: 1.15em;
}

.article-info-title {
  font-size: 1.1em;
}

.article-summary, .article-summary p {
  margin-top: 0.6em;
}

.article-body {
  padding-top: 1.4em;
}

.article-footer {
  margin-top: 1.2em;
}

.codehilite pre {
  padding: 0.4em;
  background-color: #f5f5f5;
  border-radius: .25rem !important;
  border: 1px solid #dee2e6 !important;
}

.images {
  margin: 0.8em;
  text-align: center;
}

.thumbnail {
  padding: 0.25em;
}

a.anchor {
  display: block;
  position: relative;
  top: -80px;
  visibility: hidden;
}

footer .container {
  margin-bottom: 2em;
}

